--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,15 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  stackstorm-ci:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
+
+    services:
+      mongodb:
+        container: mongo:4.0-xenial
+      rabbitmq:
+        container: rabbitmq:3.6
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
