--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,5 @@
-# This is a basic workflow to help you get started with Actions
+name: StackStorm CI
 
-name: CI
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ github_actions ]
@@ -12,18 +8,13 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  stackstorm-ci:
-    # The type of runner that the job will run on
+  python3.6 Unit tests and Pack tests:
     runs-on: ubuntu-18.04
-
     services:
       mongodb:
         image: mongo:4.0-xenial
       rabbitmq:
         image: rabbitmq:3.6
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
